--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,10 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16008a9c",
+   "id": "a30a3e47",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Hello\")"
+   ]
   }
  ],
  "metadata": {
